<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_to_trigger" />

    <EditText
        android:id="@+id/password_to_trigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:ignore="TextFields" >
    </EditText>

    <TextView
        android:id="@+id/chosen_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_app_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_app"
        android:onClick="chooseApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="save" />

</TableLayout>
